# Utility functions to register tests 
# in GRACE's unit-test framework
include(register_test)


# Here we define some object files that act as 
# mains for the Catch2 tests in different setups

# Tests involving MPI
add_library(mpi_tests_main mains/mpi_tests_main.cc)
target_include_directories(mpi_tests_main PRIVATE "${HEADER_DIR}")
target_link_libraries(  mpi_tests_main PRIVATE 
Catch2::Catch2
$<TARGET_OBJECTS:grace_parallel>
$<TARGET_OBJECTS:grace_error_handlers>
MPI::MPI_CXX
p4est::sc 
spdlog::spdlog 
ZLIB::ZLIB)

# Tests involving the yaml parser
add_library(parser_tests_main mains/parser_tests_main.cc)
target_include_directories(parser_tests_main PRIVATE "${HEADER_DIR}")
target_link_libraries(  parser_tests_main PRIVATE
Catch2::Catch2
yaml_cpp::yaml
$<TARGET_OBJECTS:grace_error_handlers>
$<TARGET_OBJECTS:grace_parallel>
$<TARGET_OBJECTS:grace_singleton>
$<TARGET_OBJECTS:grace_config_helpers>
MPI::MPI_CXX
p4est::sc
spdlog::spdlog
ZLIB::ZLIB)

# Tests involving the whole grace infrastructure
add_library(p4est_tests_main mains/p4est_tests_main.cc)
target_include_directories(p4est_tests_main PRIVATE "${HEADER_DIR}")
target_link_libraries(  p4est_tests_main PRIVATE 
Catch2::Catch2
yaml_cpp::yaml
MPI::MPI_CXX
OpenMP::OpenMP_CXX
p4est::sc
p4est::p4est 
Kokkos::kokkos
spdlog::spdlog 
ZLIB::ZLIB
$<$<BOOL:${GRACE_ENABLE_PROFILING}>:GRACE_GPUProfiling> )

# Tests involving Kokkos
add_library(kokkos_tests_main mains/kokkos_tests_main.cc)
target_include_directories(kokkos_tests_main PRIVATE "${HEADER_DIR}")
target_link_libraries(  kokkos_tests_main PRIVATE
Catch2::Catch2
$<TARGET_OBJECTS:grace_error_handlers>
$<TARGET_OBJECTS:grace_parallel>
$<TARGET_OBJECTS:grace_singleton>
$<TARGET_OBJECTS:grace_config_helpers>
yaml_cpp::yaml
Kokkos::kokkos
MPI::MPI_CXX
p4est::sc
spdlog::spdlog )

# Now add all the executables for the tests
# the functions ensure that the correct libraries
# are linked and keep this file relatively tidy 
add_mpi_test(parallel_test test_parallel.cc )
add_parser_test(parser_test test_parser.cpp )
add_grace_test(connectivity_test test_connectivities.cpp)
add_grace_test(sc_wrappers_test test_sc_wrappers.cpp)
add_grace_test(forest_test test_forest.cpp)
add_grace_test(coordinate_test test_coordinates.cpp)
add_grace_test(cks_coordinate_test test_coordinates_cks.cpp)
add_grace_test(regrid_test test_regridding.cpp)
add_grace_test(bc_test test_bc.cpp)
add_grace_test(bc_test_unigrid test_bc_unigrid.cpp)
add_grace_test(reflect_bc_test test_reflect_bc.cpp)
add_grace_test(scalar_reductions_test test_scalar_reductions.cpp)
add_grace_test(hdf5_output_test test_hdf5_IO.cpp)
# TODO: test_eos.cpp uses several EOS API methods that have since been
# removed (eps__press_temp_rho_ye, eps_h_csnd2__press_rho_ye,
# eps_h_csnd2_temp_entropy__press_rho_ye) and an `unsigned int err`
# convention from before error_type became `bitset_t<12>`.  Re-enable
# after a full rewrite against the current eos_base.hh API.
# add_grace_test(eos_test test_eos.cpp)
add_grace_test(metric_test test_metric.cpp)
add_grace_test(c2p_test test_c2p.cpp)
add_grace_test(grmhd_kernels_test test_grmhd_kernels.cpp)
add_grace_test(emf_reflux_test test_reflux.cpp)
add_grace_test(flux_reflux_test test_flux_reflux.cpp)
add_grace_test(ct_flux_conservation_test test_ct_flux_conservation.cpp)
add_grace_test(fofc_conservation_test test_fofc_conservation.cpp)
add_grace_test(checkpoint_roundtrip_test test_checkpoint_roundtrip.cpp)
add_grace_test(test_sph_int test_spherical_surface.cpp)
add_grace_test(interp_on_sphere_test test_interpolation_on_sphere.cpp)
add_grace_test(grid_interpolator_test test_grid_interpolator.cpp)

if(GRACE_METRIC_EVOL STREQUAL "Z4")
    add_grace_test(adm_integrals_test test_adm_integrals.cpp)
endif()

if( GRACE_ENABLE_PARTICLES )
add_grace_test(particle_owner_search_test test_particle_owner_search.cpp)
add_grace_test(particle_aux_fetch_test    test_particle_aux_fetch.cpp)
add_grace_test(particle_advance_test      test_particle_advance.cpp)
endif()

if( GRACE_ENABLE_M1 )
add_kokkos_test(m1_analytic_rates_test test_m1_analytic_rates.cpp)
add_test(NAME m1_analytic_rates_test COMMAND mpirun -n 1 ./m1_analytic_rates_test)
# Pure serial unit checks — pin OpenMP to one thread so the test is immune
# to the macOS duplicate-libomp teardown crash that affects multi-threaded
# Kokkos test binaries.
set_tests_properties(m1_analytic_rates_test PROPERTIES
    LABELS "fast;physics;m1"
    ENVIRONMENT "OMP_NUM_THREADS=1;OMP_PROC_BIND=false")
endif()

# All four kokkos_tests_main-using binaries link MPI (via grace_parallel /
# grace_singleton transitive deps) and call `parallel::mpi_init` at
# startup; launch via `mpirun -n 1` so the OpenMPI runtime is set up
# consistently across clusters (Sakura's direct-launch path is broken
# even with MPI_Init in the binary).
add_kokkos_test(fd_symmetry_test test_fd_symmetry.cpp)
add_test(NAME fd_symmetry_test COMMAND mpirun -n 1 ./fd_symmetry_test)

add_kokkos_test(fd_correctness_test test_fd_correctness.cpp)
add_test(NAME fd_correctness_test COMMAND mpirun -n 1 ./fd_correctness_test)

add_kokkos_test(z4c_regrouping_test test_z4c_regrouping.cpp)
add_test(NAME z4c_regrouping_test COMMAND mpirun -n 1 ./z4c_regrouping_test)

add_kokkos_test(z4c_partner_equivariance_test test_z4c_partner_equivariance.cpp)
add_test(NAME z4c_partner_equivariance_test COMMAND mpirun -n 1 ./z4c_partner_equivariance_test)

add_standalone_test(hermite_polynomial_test test_hermite_polynomial.cpp)

add_standalone_test(hermite_interp_test test_hermite_interp.cpp)

#
# CTest registrations + labels
# ----------------------------
# Label scheme (orthogonal, multi-valued):
#   fast         — completes in ~seconds on a CPU runner with no GPU; eligible
#                  for the per-PR CI lane.  Omit on multi-rank / heavy tests.
#   mpi          — needs mpirun.
#   physics      — physics modules (GRMHD, EOS, c2p, Z4c) at the kernel level.
#   amr          — AMR / regrid / connectivity infrastructure.
#   bc           — boundary conditions / ghost-zone exchange.
#   coords       — coordinate system / metric.
#   conservation — FP-floor conservation properties at the AMR interface.
#   io           — output formats (HDF5).
#   particles    — particle subsystem (gated by GRACE_ENABLE_PARTICLES).
#
# CI usage: `ctest -L fast` for the PR smoke lane, `ctest` for the full sweep.
#

# ----- MPI wrappers, parser, errors (no parfile) ---------------------------
add_test(NAME parallel_test COMMAND mpirun -n 2 ./parallel_test)
set_tests_properties(parallel_test PROPERTIES LABELS "fast;mpi")

add_test(NAME parser_test COMMAND mpirun -n 1 ./parser_test)
set_tests_properties(parser_test PROPERTIES LABELS "fast")

# ----- Math / interpolation (standalone, no parfile) -----------------------
add_test(NAME hermite_polynomial_test COMMAND ./hermite_polynomial_test)
set_tests_properties(hermite_polynomial_test PROPERTIES LABELS "fast")
add_test(NAME hermite_interp_test     COMMAND ./hermite_interp_test)
set_tests_properties(hermite_interp_test     PROPERTIES LABELS "fast")

# ----- Kokkos / codegen tests (no parfile) ---------------------------------
# `add_kokkos_test` already registered these with the basic Kokkos main;
# add CTest cases + labels here.  Each binary's own `add_test` invocation
# already existed; we just promote them to the new label scheme.
set_tests_properties(fd_symmetry_test
                     fd_correctness_test
                     z4c_regrouping_test
                     z4c_partner_equivariance_test
                     PROPERTIES LABELS "fast;physics")

# ----- Connectivity, forest, varlist, coords -------------------------------
add_test(NAME sc_wrappers_test COMMAND
        mpirun -n 1 ./sc_wrappers_test --grace-parfile ./configs/basic_config.yaml)
set_tests_properties(sc_wrappers_test PROPERTIES LABELS "fast")

add_test(NAME connectivity_test COMMAND
        mpirun -n 1 ./connectivity_test --grace-parfile ./configs/basic_config.yaml)
set_tests_properties(connectivity_test PROPERTIES LABELS "fast;amr")

add_test(NAME forest_test_np1 COMMAND
        mpirun -n 1 ./forest_test --grace-parfile ./configs/basic_config.yaml)
set_tests_properties(forest_test_np1 PROPERTIES LABELS "fast;amr")

# Multi-rank invocation: same parfile, 2 ranks.  Exercises the partition
# branch of `local_num_quadrants` and the user_data walk on a rank that
# only owns part of the global tree.
add_test(NAME forest_test_np2 COMMAND
        mpirun -n 2 ./forest_test --grace-parfile ./configs/basic_config.yaml)
set_tests_properties(forest_test_np2 PROPERTIES LABELS "mpi;amr")

add_test(NAME coordinate_test_np1 COMMAND
        mpirun -n 1 ./coordinate_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(coordinate_test_np1 PROPERTIES LABELS "fast;coords")

# Multi-rank invocation exercises the partition + MPI-reduce-of-volume path.
add_test(NAME coordinate_test_np2 COMMAND
        mpirun -n 2 ./coordinate_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(coordinate_test_np2 PROPERTIES LABELS "mpi;coords")

# Cartesian Kerr-Schild: spin-dependent branches of cart_to_sph / sph_to_cart.
add_test(NAME cks_coordinate_test COMMAND
        mpirun -n 1 ./cks_coordinate_test --grace-parfile ./configs/basic_config_cks.yaml )
set_tests_properties(cks_coordinate_test PROPERTIES LABELS "fast;coords")

# ----- AMR regrid (multi-rank) ---------------------------------------------
add_test(NAME regrid_test_cartesian COMMAND
        mpirun -n 2 ./regrid_test --grace-parfile ./configs/regrid_test_cartesian.yaml)
set_tests_properties(regrid_test_cartesian PROPERTIES LABELS "mpi;amr")

# ----- Boundary conditions / ghost zones -----------------------------------
add_test(NAME bc_test_unigrid_cartesian COMMAND
        mpirun -n 2 ./bc_test_unigrid --grace-parfile ./configs/regrid_test_cartesian.yaml )
add_test(NAME bc_test_cartesian COMMAND
        mpirun -n 2 ./bc_test --grace-parfile ./configs/regrid_test_cartesian.yaml )
set_tests_properties(bc_test_unigrid_cartesian bc_test_cartesian
                     PROPERTIES LABELS "mpi;bc")

# Reflection BC ghost-zone fill on the octant [0,1]^3 with symmetries on all
# three axes.  Catches the reflect_bc_t::apply int8-overflow / uninit-ijk
# class of bugs that fault on discrete CUDA but go silent on unified-memory
# APUs (see commit history May-2026).  Covers centered scalars, vectors,
# symmetric tensors, and the three face-staggered B components.
add_test(NAME reflect_bc_test_unigrid COMMAND
        mpirun -n 1 ./reflect_bc_test --grace-parfile ./configs/reflect_bc_unigrid.yaml )
set_tests_properties(reflect_bc_test_unigrid PROPERTIES LABELS "fast;bc;reflection")

# Same coverage on an FMR layout (one level of refinement on a box that
# contains the origin), exercising reflection BCs at multiple AMR levels.
add_test(NAME reflect_bc_test_fmr COMMAND
        mpirun -n 1 ./reflect_bc_test --grace-parfile ./configs/reflect_bc_fmr.yaml )
set_tests_properties(reflect_bc_test_fmr PROPERTIES LABELS "fast;bc;reflection;amr")

# BC + ghost-zone test on a deeper FMR layout (4 boxes, 7 levels max, ngz=4):
# exercises the FMR ghost-fill P/R path (polynomial cell-centered + B = curl A
# from a polynomial vector potential) and the post-exchange conservation snapshot
# — integrated state bit-identical before/after, max|divB| at FP floor.
add_test(NAME bc_test_fmr COMMAND
        mpirun -n 2 ./bc_test --grace-parfile ./configs/bc_test_fmr.yaml )
set_tests_properties(bc_test_fmr PROPERTIES LABELS "mpi;bc;amr")

# ----- Reflux + conservation (FP-floor) ------------------------------------
# EMF idempotence — unigrid, single-rank.  Pure same-level reflux smoke
# test; demonstrates the apply kernels reach a fixed point on the unigrid
# kernels (coarse-face / coarse-edge same-level paths).
add_test(NAME emf_reflux_test_cartesian COMMAND
        mpirun -n 1 ./emf_reflux_test --grace-parfile ./configs/regrid_test_cartesian.yaml )
# Dropped from `fast` — currently failing on Sakura (under triage).  Still
# runs in the full ctest lane via the `physics` label.
set_tests_properties(emf_reflux_test_cartesian PROPERTIES LABELS "physics")

# Face-flux reflux — FMR grid, multi-rank.  Conservation check on
# periodic BCs: a synthetic div(F) update followed by reflux must
# leave sum(state*dV) at the FP roundoff floor.  Shares the periodic
# FMR parfile with ct_flux_conservation_test.
add_test(NAME flux_reflux_test_fmr COMMAND
        mpirun -n 2 ./flux_reflux_test --grace-parfile ./configs/ct_flux_conservation_test.yaml )
# CT + EMF reflux magnetic-flux conservation — FMR grid with periodic
# BCs.  Asserts max|divB| ~ 0 (per-cell CT preservation) and
# sum(divB*dV) ~ 0 (AMR interface conservation).
add_test(NAME ct_flux_conservation_test_fmr COMMAND
        mpirun -n 2 ./ct_flux_conservation_test --grace-parfile ./configs/ct_flux_conservation_test.yaml )
# FOFC + reflux conservation — FMR grid with periodic BCs.  Manually flags
# faces around 1 coarse + 1 fine cell on either side of every F-C interface
# on this rank (or 4 interior cells if no F-C exists), runs the production
# apply_fofc_correction + reflux + add_fluxes pipeline, and asserts the
# integrated state stays at initial within 1e-13·l1.
add_test(NAME fofc_conservation_test_fmr COMMAND
        mpirun -n 2 ./fofc_conservation_test --grace-parfile ./configs/fofc_conservation_test.yaml )
set_tests_properties(flux_reflux_test_fmr ct_flux_conservation_test_fmr
                     fofc_conservation_test_fmr
                     PROPERTIES LABELS "mpi;conservation;amr")

# Checkpoint round-trip — small TOV initial data, write checkpoint, scribble
# state with a sentinel, load checkpoint, assert every evolved field is
# bit-exact against a pre-write snapshot. Catches lossy HDF5 round-trips and
# missing/forgotten state in the checkpoint write set. Run at np=1 and np=2
# to also exercise the collective MPI-IO write/read path.
add_test(NAME checkpoint_roundtrip_test_np1 COMMAND
        mpirun -n 1 ./checkpoint_roundtrip_test --grace-parfile ./configs/checkpoint_roundtrip_test.yaml )
add_test(NAME checkpoint_roundtrip_test_np2 COMMAND
        mpirun -n 2 ./checkpoint_roundtrip_test --grace-parfile ./configs/checkpoint_roundtrip_test.yaml )
set_tests_properties(checkpoint_roundtrip_test_np1 checkpoint_roundtrip_test_np2
                     PROPERTIES LABELS "mpi;checkpoint;io")

# ----- Physics units -------------------------------------------------------
# TODO: norm2 reduction's definition has changed (now appears to be RMS
# rather than the integral Σ ρ²·dV the test expected, giving a ~sqrt(V)
# magnitude offset).  Re-derive the analytic reference for the new
# convention and re-enable.
# add_test(NAME scalar_reductions_test COMMAND
#         mpirun -n 1 ./scalar_reductions_test --grace-parfile ./configs/scalar_reductions_test.yaml )
# set_tests_properties(scalar_reductions_test PROPERTIES LABELS "fast")

# TODO: pwpoly_test re-enable when test_eos.cpp is rewritten for the new
# EOS API.  See the matching comment block above the disabled add_grace_test
# call.
# add_test(NAME pwpoly_test COMMAND
#         mpirun -n 1 ./eos_test --grace-parfile ./configs/pwpoly_test_config.yaml )
# set_tests_properties(pwpoly_test PROPERTIES LABELS "fast;physics")

add_test(NAME metric_test COMMAND
        mpirun -n 1 ./metric_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(metric_test PROPERTIES LABELS "fast;coords")

add_test(NAME gamma2_c2p_test COMMAND
        mpirun -n 1 ./c2p_test --grace-parfile ./configs/c2p_test_gamma2.yaml )
set_tests_properties(gamma2_c2p_test PROPERTIES LABELS "fast;physics")

add_test(NAME grmhd_kernels_test COMMAND
        mpirun -n 1 ./grmhd_kernels_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(grmhd_kernels_test PROPERTIES LABELS "fast;physics")

add_test(NAME grid_interpolator_test COMMAND
        mpirun -n 1 ./grid_interpolator_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(grid_interpolator_test PROPERTIES LABELS "fast")

# ----- Spherical surfaces (single-rank, parfile) ---------------------------
add_test(NAME test_sph_int COMMAND
        mpirun -n 1 ./test_sph_int --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(test_sph_int PROPERTIES LABELS "fast")

add_test(NAME interp_on_sphere_test COMMAND
        mpirun -n 1 ./interp_on_sphere_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(interp_on_sphere_test PROPERTIES LABELS "fast")

# ----- HDF5 output (multi-rank, parfile) -----------------------------------
add_test(NAME hdf5_output_test COMMAND
        mpirun -n 2 ./hdf5_output_test --grace-parfile ./configs/basic_config.yaml )
set_tests_properties(hdf5_output_test PROPERTIES LABELS "mpi;io")

# ----- Z4c-only tests (gated on GRACE_METRIC_EVOL=Z4) ----------------------
if(GRACE_METRIC_EVOL STREQUAL "Z4")
    add_test(NAME adm_integrals_test COMMAND
            mpirun -n 1 ./adm_integrals_test --grace-parfile ./configs/adm_integrals_test.yaml )
    set_tests_properties(adm_integrals_test PROPERTIES LABELS "fast;physics")
endif()

# ----- Particles (gated on GRACE_ENABLE_PARTICLES) -------------------------
if( GRACE_ENABLE_PARTICLES )
    add_test(NAME particle_owner_search_test COMMAND
            mpirun -n 2 ./particle_owner_search_test --grace-parfile ./configs/regrid_test_cartesian.yaml )
    add_test(NAME particle_aux_fetch_test COMMAND
            mpirun -n 2 ./particle_aux_fetch_test --grace-parfile ./configs/regrid_test_cartesian.yaml )
    add_test(NAME particle_advance_test COMMAND
            mpirun -n 2 ./particle_advance_test --grace-parfile ./configs/regrid_test_cartesian.yaml )
    set_tests_properties(particle_owner_search_test
                         particle_aux_fetch_test
                         particle_advance_test
                         PROPERTIES LABELS "mpi;particles")
endif()
